--- a/iOS/SignUp/SignUp/Info.plist
+++ b/iOS/SignUp/SignUp/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사진을 가져와야 합니다. 그 이유는 ~~~입니다.</string>
 </dict>
 </plist>
